# VoxFila

./: .dockerignore  .env  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE.md  docker-compose-prod.yaml  docker-compose.yaml  publish_to_docker_hub.ps1  publish_to_docker_hub.txt  rust-analyzer.toml  rustfmt.toml
.sqlx/: query-05bfecc3472ef8d8d3cb0121bd08465ebfea35b4eb03f2f37f96417caa0515d4.json  query-096b6fcc96cab34575456fe36a0320f60f314dc92d0e008537ad6bd3735140c7.json  query-15dbb3dbdf6caa380016e25f15bc87f565de9c06c64c79705e897600e0730df9.json  query-1ea02ff9b4c7f41de07cd26ae8d296430142ac3ee1b74b748fde672ca4b75b3e.json  query-2a1b8a80ddacac92a0259353ccde3c18895a01b641b1aa1b1b200078f4b8f22d.json  query-41ed133c6955d3a2129bdfb34b6467f681f90348347053b48efa3fda47b08a48.json  query-47f744d10f103f9f83b9638781711b9f71aaefca3c79a9b88ccea41ecd19660c.json  query-49af5016ed6a8b359598d9d3704adb2481b9c721e641056cf00486343714b035.json  query-5d7e59b071c06d67c211f3f2b5a6240be86578de6bb49b7d5b100d7d2ad153c2.json  query-60d8ea0023b0601bf47b6baa65d3235fd5d05e6f3cbdffa165e568346bf65167.json  query-63aa042c980e6051e45a17370bf02c622f3eaf069b2cbbf459e916c237a8df0c.json  query-6f2b8862d4d7ca74f2b9d1603c299f139eb169118326c47cd0419df5b57139cf.json  query-7069e80a04e9fdbed9a58a0e13437412bfb0b66e7338b1c7cfd59730fb78be10.json  query-8f77739a45108b9bdf02d002dbd26efc358d280c8168d740e14a485192add124.json  query-90cc7195b99a41819b3e93a2df08aa5cac6a92e5bf0f71e3fc6616f02afcc953.json  query-92b27f7a5226b07f81f350fc6865b87e0505c31f1bd5ef65796a973289bc4a9c.json  query-abbf15a20bd078cac7647c861f937304a9a82901b14aee3af7f951953c2384da.json  query-afd9bb44dd177effe8041b740c71073bf494cdb87f850b42d948e8b6530308c4.json  query-bc0e3157cd427c213c07be969848e04997298e8066a226209ba0f95020ce4536.json  query-c84d0a8abea8f245feae0ba770fe814d452ea9b44bc110df501419fa1ecd6536.json  query-d1a16b29067f25d08696cece2393e3c4f988a778c22aab834dfd58edf0207c6a.json  query-ec75546d7a67830b32c8556455dd9132ebd4130896697a88f80fb35d4cd6acda.json  query-eeb1ab40ec4764f716324405279727e5f63f34b13b2f4a4fa6fe8990ffe40709.json  query-f922f587119b1f8dac039496d87c98022dddebbfa4263ebc781d0300f69cf923.json
app/: Cargo.toml  package-lock.json  package.json  tailwind.config.js  tailwind.css
app/assets/: tailwind.css
app/src/: main.rs
app/src/components/: global_states.rs  icons.rs  language_selector.rs  mod.rs  modals.rs  queue_entry_card.rs  session_card.rs  singers_card.rs  song_card.rs  song_links_card.rs  user_new_song_request.rs
app/src/i18n/: en-US.ftl  pl-PL.ftl
app/src/utils/: links.rs  mod.rs  validation.rs
app/src/views/: mod.rs  navbar.rs  route.rs  session_management.rs  song_queue.rs  song_request.rs  song_request_form.rs  song_search.rs  song_select.rs  songs_list.rs  test.rs
docs/: features.md  operator_workflow.md  queue_ordering.md  user_workflow.md
migrations/: 20250803142715_Initial_setup.sql  20250804181057_Improve_queue_entries.sql  20250815084522_Add_function_for_adding_automatic_queue_entry_order_position.sql  20250817164031_Add_gin_index_on_title_and_artist_for_songs_table.sql
pgadmin/: servers.json
server/: Cargo.toml
server/src/: database.rs  lib.rs  queue_entries.rs  sessions.rs  singers.rs  songs.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/models/: mod.rs  queue_entries.rs  session.rs  singers.rs  songs.rs
shared/src/utils/: validation.rs
