[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = [
    "web",
    "router",
    "fullstack",
    "signals",
    "hooks",
    "asset",
    "logger",
    "launch",
    "router",
] }
dioxus-logger = { workspace = true }
server = { workspace = true }
shared = { workspace = true }

dioxus-i18n = "0.4.3"
log = { workspace = true }
tokio = { version = "1.45.1", features = [
    "parking_lot",
    "rt-multi-thread",
    "macros",
], optional = true }

maplit = "1.0.2"

[features]
server = ["dioxus/server", "server/db", "tokio"]
web = ["dioxus/web"]
