[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = [
    "html",
    "document",
    "macro",
    "signals",
    "hooks",
    "asset",
    "logger",
    "launch",
    "router",
    "fullstack",
] }
dioxus-logger = { workspace = true }
shared = { workspace = true }
# once_cell = "1.21.3"
tokio = { version = "1.45.1", features = [
    "parking_lot",
    "rt-multi-thread",
    "macros",
], optional = true }
log = { workspace = true }
sqlx = { version = "0.8.6", optional = true, features = [
    "default",
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }
dioxus-hooks = "0.6.2"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["default", "serde"] }

[features]
db = ["tokio", "sqlx"]

[dev-dependencies]
env_logger = "0.11.8"
